# learning-rust

./: Readme-us.md  Readme.md
estudos/alo/: main.rs
estudos/alo2/: Cargo.toml
estudos/cap02/ex01-celsius-to-fahrenheit/: Cargo.toml
estudos/cap02/ex02-fahrenheit-to-celsius/: Cargo.toml
estudos/cap02/ex03_switch_values_a_to_b/: Cargo.toml
estudos/cap02/ex04-calc-volume/: Cargo.toml
estudos/cap02/ex05-convert-type-and-multiplicate/: Cargo.toml
estudos/cap02/ex06-square-diff/: Cargo.toml
estudos/cap02/ex07-sum-squares/: Cargo.toml
estudos/cap02/ex08-square-of-sum/: Cargo.toml
estudos/cap02/ex09-salary-ajusts/: Cargo.toml
estudos/cap03/ex01-diff-biggeest-than-smallest/: Cargo.toml
estudos/cap03/ex02-student-approval-media-5/: Cargo.toml
estudos/cap03/ex03-student-approval-media-7/: Cargo.toml
estudos/cap03/ex04-order-by-asc/: Cargo.toml
estudos/cap03/ex05-only-divisible-2-and-3/: Cargo.toml
estudos/cap03/ex06-only-divisible-2-or-3/: Cargo.toml
estudos/cap03/ex07-show-bigger-and-smaller-without-reordernate/: Cargo.toml
estudos/cap03/ex08-is-not-greater-than-3/: Cargo.toml
estudos/cap03/ex09-multiply-by-2-and-show-only-greather-than-30/: Cargo.toml
estudos/cap04/ex-random/: Cargo.toml
estudos/cap04/ex-random/src/: main.rs
estudos/cap06/ex01-ref-pointers/: Cargo.toml
estudos/cap06/ex02-exclusive-pointers/: Cargo.toml
estudos/cap06/ex03-creating-lib/: Cargo.toml
estudos/cap07/ex01-static-matriz/: Cargo.toml
estudos/cap07/ex02-matriz-ordenate/: Cargo.toml
estudos/cap07/ex03-iterator/: Cargo.toml
(+29 files in other folders)
