[package]
name = "ex-random"
version = "0.1.0"
authors = ["David Silva <srdavidsilva@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.3.16" # aqui vai a dependencia com sua versão no estilo semVer. Utilizei a versão do livro para seguir exatamente o exemplo